force-app/main/default/objects/User/fields/et4ae5__Default_ET_Page__c.field-meta.xml
<CustomField>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>