force-app/main/default/objects/User/fields/et4ae5__Default_MID__c.field-meta.xml
<CustomField>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>