force-app/main/default/objects/User/fields/et4ae5__ExactTarget_OAuth_Token__c.field-meta.xml
<CustomField>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </CustomField>