force-app/main/default/objects/User/fields/et4ae5__ExactTargetForAppExchangeUser__c.field-meta.xml
<CustomField>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </CustomField>