force-app/main/default/objects/User/fields/et4ae5__ExactTargetUsername__c.field-meta.xml
<CustomField>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>