force-app/main/default/objects/User/fields/et4ae5__ValidExactTargetUser__c.field-meta.xml
<CustomField>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </CustomField>