force-app/main/default/objects/User/fields/Location__c.field-meta.xml
<CustomField>
        <fullName>Location__c</fullName>
        <description>The location where the partner community user is selling on a specific day</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>