force-app/main/default/objects/User/fields/Newspaper__c.field-meta.xml
<CustomField>
        <fullName>Newspaper__c</fullName>
        <description>The newspaper that the partner community user is selling on a specific day</description>
        <label>Newspaper</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>