force-app/main/default/objects/User/fields/Partner_Selling_Date__c.field-meta.xml
<CustomField>
        <fullName>Partner_Selling_Date__c</fullName>
        <description>The date and time that the partner community user selected the Newspaper and Location</description>
        <label>Partner Selling Date</label>
        <type>DateTime</type>
    </CustomField>