force-app/main/default/objects/User/fields/SSO_Extension__c.field-meta.xml
<CustomField>
        <fullName>SSO_Extension__c</fullName>
        <label>SSO_Extension</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>