force-app/main/default/objects/User/fields/userToken__c.field-meta.xml
<CustomField>
        <fullName>userToken__c</fullName>
        <description>user token</description>
        <label>userToken</label>
        <length>64</length>
        <type>Text</type>
    </CustomField>