force-app/main/default/objects/User/listViews/ActiveUsers.listView-meta.xml
<ListView>
        <fullName>ActiveUsers</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>TIMEZONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </ListView>