force-app/main/default/objects/User/listViews/RelationEdge_Users.listView-meta.xml
<ListView>
        <fullName>RelationEdge_Users</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>relationedge</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>rackspace</value>
        </filters>
        <label>RelationEdge Users</label>
        <sharedTo>
            <role>PMN</role>
        </sharedTo>
    </ListView>